--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "zone.js": "^0.8.16"
   },
   "dependencies": {
-    "bootstrap": "4.0.0-beta.2"
+    "bootstrap": "4.0.0-beta.2",
+    "moment": "^2.20.1"
   }
 }
