--- a/src/package.json
+++ b/src/package.json
@@ -23,5 +23,8 @@
     "@angular/common": ">=4.0.0 <6.0.0",
     "@angular/core": ">=4.0.0 <6.0.0",
     "@angular/forms": ">=4.0.0 <6.0.0"
+  },
+  "dependencies": {
+    "inputmask": "^3.3.11"
   }
 }
